# CMakeLists-templates

Libtorch/: CMakeLists.txt
cuda/: CMakeLists.txt
